Fix clickable card override, breadcrumb on safari

--- a/src/css/components/_clickable-card.scss
+++ b/src/css/components/_clickable-card.scss
@@ -42,7 +42,6 @@ il-clickable-card,
       width: 16px;
       display: var(--il-clickable-card-post-display);
       margin-left: 4px;
-      display: inline;
       position: absolute;
       margin-top: 6px;
       background-color: var(--il-clickable-card-heading-color);
